--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Shopping List</h1>
     <p>Hurry up !!!</p>
     <p>Get it done today</p>
-    <button>Click me!</button>
+    <input id="userinput" type="text" placeholder="enter the items" />
+    <button id="enter">Enter</button>
     <ul>
       <li>Iphone</li>
       <li>Laptop</li>
