--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <input id="userinput" type="text" placeholder="enter the items" />
     <button id="enter">Enter</button>
     <ul>
-      <li>Iphone</li>
-      <li>Laptop</li>
+      <li>SmartBand</li>
+      <li>Gadgets</li>
       <li>Camera</li>
     </ul>
     <script type="text/javascript" src="script.js"></script>
